fixed alignment of heading

--- a/media.css
+++ b/media.css
@@ -46,6 +46,9 @@
     .about-containers{
         margin-top: 0;
     }
+    h1 {
+        padding-left: 8%;
+    }
 }
 
 @media screen and (max-width:600px){
@@ -104,6 +107,7 @@
     .text-container {
         text-align: justify;
     }
+    
 }
 
 
